--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     canvas.height = window.innerHeight;
     canvas.width = window.innerWidth;
 
-    let chars = "01";
+    let chars = "X";
     chars = chars.split("");
 
     let fontSize = 16;
