change the contact link

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       Launching Soon. Join the mission.
     </p>
 
-    <button class="glow-btn" onclick="window.open('https://www.instagram.com/_here_cta___/', '_blank')">Follow Our Journey</button>
+    <button class="glow-btn" onclick="window.open('https://www.linkedin.com/in/chithaa-mithmaa-madanayake-a3814a293/', '_blank')">Follow Our Journey</button>
   </div>
 
   <div class="matrix">
